# stagrdb

./: .env.example  Cargo.toml  Dockerfile  compose.yml  readme.md  rustfmt.toml  setup.sh  startup.sh
.github/workflows/: rust.yml
resource/: db-schema.sql  delete-table.sql  packet-log.sql
resource/timescale-db/: compose.yml
src/: error.rs  main.rs  readme.md
src/config/: app_config.rs  error.rs  mod.rs
src/database/: client.rs  error.rs  mod.rs  pool.rs
src/interface/: error.rs  mod.rs  select_interface.rs
src/logger/: error.rs  idps_logger.rs  mod.rs  setup_logger.rs
src/packet/: mod.rs
src/packet/analysis/: analyzer.rs  ethernet.rs  ip.rs  mod.rs  transport.rs
src/packet/analysis/firewall/: filter.rs  firewall.rs  mod.rs  packet.rs  policy.rs
src/packet/monitor/: error.rs  mod.rs  network_monitor.rs
src/packet/reader/: error.rs  mod.rs  packet_reader.rs  packet_sender.rs
src/packet/repository/: mod.rs  packet_repository.rs
src/packet/types/: inet_addr.rs  mac_addr.rs  mod.rs  packet.rs
src/packet/types/protocol/: ether_type.rs  ip_protocol.rs  mod.rs
src/packet/writer/: error.rs  mod.rs  packet_buffer.rs  packet_writer.rs
src/services/: db_service.rs  error.rs  firewall_service.rs  mod.rs
src/tasks/: error.rs  mod.rs  scheduler.rs  task_monitor.rs  task_state.rs
src/utils/: measure_time.rs  mod.rs
