[package]
name = "rdb-tunnel"
version = "0.1.0"
edition = "2021"
authors = ["相田 優希 <51500566+aida0710@users.noreply.github.com>"]

[dependencies]
async-trait = { version = "0.1" }
bb8 = { version = "0.9.0" }
bb8-postgres = { version = "0.9.0" }
bytes = { version = "1.9" }
chrono = { version = "0.4" }
dotenv = { version = "0.15" }
env_logger = { version = "0.11.6" }
lazy_static = { version = "1.5" }
log = { version = "0.4" }
once_cell = { version = "1.20" }
pnet = { version = "0.35" }
postgres-types = { version = "0.2" }
rtnetlink = { version = "0.14" }
thiserror = { version = "2.0" }
tokio = { version = "1.42", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
nix = { version = "0.29.0", features = ["socket"] }
libc = { version = "0.2" }
